# uncrustify-objc

./: LICENSE  MANIFEST.in  README  README.md  README.txt  pyproject.toml  setup.py  uncrustify.cfg  uncrustify.py  uncrustify_ignore_global  uncrustify_objc.py  uncrustify_path.plist
