[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uncrustify-objc"
version = "1.6"
authors = [
    {name = "Will Han", email = "xingheng.hax@qq.com"},
]
description = "Use uncrustify to format the objective-c files under the specified project path"
readme = "README.txt"
license = {text = "MIT"}
keywords = ["uncrustify", "objective-c", "objc", "code", "beauty", "format"]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Objective C",
    "Programming Language :: Unix Shell",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "click",
    "pathspec",
]

[project.urls]
"Homepage" = "https://github.com/python-cli/uncrustify-objc"

[project.scripts]
uncrustify-objc = "uncrustify_objc:cli"
